feat: adds mapper for mapping revision to revisionDTO